# nominaPy

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
nominaApp/: asgi.py  settings.py  urls.py  wsgi.py
nominaApp/model/: correo.py  db.py  personal.py  rrhh.py  solicitud.py  usuario.py
nominaApp/templates/: forgot.html  login.html  register.html
nominaApp/templates/partials/: sidebar_personal.html  sidebar_rrhh.html
nominaApp/templates/personal/: enviar-solicitud.html  index.html  mi-registro.html  mis-solicitudes.html  modificar-registro.html
nominaApp/templates/rrhh/: index.html  nomina-personal.html  nuevo-registro-personal.html  solicitudes-personal.html
nominaApp/views/: personal.py  rrhh.py  usuario.py
staticfiles/: staticfiles.json
